<resources>
    <string name="app_name">My Application</string>
    <string name="settings">settings</string>
    <string name="vote">vote</string>
    <string name="payment">payment</string>
    <string name="upload_Receipts">upload receipts</string>
    <string name="notification">notification</string>
    <string name="new_notification">+ New Notification</string>
    <string name="add_to_favorites">Πρόσθεσε στα Favorites</string>
    <string name="show_favorites">Εμφάνιση Αγαπημένων</string>
</resources>