<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/managernotif"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/system_accent1_500"
    tools:context=".Mngr_Notif_ScrActivity"
    tools:ignore="NewApi">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="DomusLink"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings"
            app:srcCompat="@drawable/settings" />

    </LinearLayout>




    <!-- List of complaints -->
    <ListView
        android:id="@+id/lvComplaints"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="1dp"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header"
        tools:ignore="MissingConstraints" />

    <ListView
        android:id="@+id/Listview1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintBottom_toTopOf="@+id/NewNotifButton"
        app:layout_constraintTop_toBottomOf="@+id/lvComplaints"
        tools:layout_editor_absoluteX="0dp" />


    <!-- Button για δημιουργία νέας notification -->
    <Button
        android:id="@+id/NewNotifButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/new_notification"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvComplaints"
        app:layout_constraintVertical_bias="1.0" />

    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#3A4F7A"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/PollsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/vote"
            android:src="@drawable/poll" />

        <ImageButton
            android:id="@+id/PaymentButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/payment"
            android:src="@drawable/payment" />

        <ImageButton
            android:id="@+id/FileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/upload_Receipts"
            android:src="@drawable/upload_receipts" />

        <ImageButton
            android:id="@+id/notifButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/notification"
            android:src="@drawable/notifications" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
