<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tenap_manager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/system_accent1_500"
    tools:context=".TenapMngrScrActivity"
    tools:ignore="NewApi">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="DomusLink"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/settingsButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/settings"
            android:contentDescription="@string/settings"
            />

    </LinearLayout>

    <!-- Middle elements -->
    <LinearLayout
        android:id="@+id/middle_elements"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="232dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="#3A4F7A"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp"
            android:shape="rectangle">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Apartment List"
                android:textColor="#000"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Edit"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:background="#3A4F7A"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="12dp"
            android:shape="rectangle">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Tenant"
                android:textColor="#000"
                android:textSize="16sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/add_tnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="+ Add"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/remove_tnt"
                android:layout_width="136dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="- Remove"
                android:textSize="14sp"
                tools:ignore="HardcodedText" />

        </LinearLayout>
    </LinearLayout>

    <!-- Apartment List -->

    <!-- Tenant -->

    <!-- Bottom Bar -->
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#3A4F7A"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/PollsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/vote"
            android:src="@drawable/poll" />

        <ImageButton
            android:id="@+id/PaymentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/payment"
            android:src="@drawable/payment" />

        <ImageButton
            android:id="@+id/FileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/upload_Receipts"
            android:src="@drawable/upload_receipts" />

        <ImageButton
            android:id="@+id/notifButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/notification"
            android:src="@drawable/notifications" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>