<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tenant_notif_scr"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/system_accent1_500"
    tools:ignore="NewApi">


    <!-- Header -->

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="DomusLink"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:background="@android:color/transparent"
            android:id="@+id/settingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/settings"
            android:contentDescription="@string/settings"/>

    </LinearLayout>


    <!-- List of Notifications -->
    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="340dp"
        android:background="@drawable/rounded_container"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header"
        app:layout_constraintVertical_bias="0.913"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Notifications"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/Listview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="20dp" />

    </LinearLayout>

    <!-- List of complaints -->
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="390dp"
        android:layout_height="290dp"
        android:background="@drawable/rounded_container"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnClearTenantData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Complaints"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lvTenantNotifs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="2dp"
            android:divider="@android:color/darker_gray"
            android:dividerHeight="1dp"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            tools:ignore="MissingConstraints" />
    </LinearLayout>

    <Button
        android:id="@+id/btnClearTenantData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginBottom="40dp"
        android:text="Καθαρισμός"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <!-- Bottom Navigation -->
    <LinearLayout
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#3A4F7A"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/PollsButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/vote"
            android:background="@android:color/transparent"
            android:src="@drawable/poll" />

        <ImageButton
            android:id="@+id/PaymentButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/payment"
            android:background="@android:color/transparent"
            android:src="@drawable/payment" />

        <ImageButton
            android:id="@+id/FileButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/upload_Receipts"
            android:background="@android:color/transparent"
            android:src="@drawable/upload_receipts" />

        <ImageButton
            android:id="@+id/notifButton"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:contentDescription="@string/notification"
            android:background="@android:color/transparent"
            android:src="@drawable/notifications" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
